src/test/deca/syntax/parser/invalid/inst_expr_print_add_parenthese.deca
// Parser test, parenthese problem

{
    print() 5 );
}